Apply manifests using server-side apply
Remove the need to shell out to `oc` or statically link to kubectl by
applying manifest files using a server-side apply (PATCH) operation.

--- a/hypershift-operator/assets/controlplane/hypershift/router-proxy/router-proxy-deployment.yaml
+++ b/hypershift-operator/assets/controlplane/hypershift/router-proxy/router-proxy-deployment.yaml
@@ -52,8 +52,10 @@ spec:
         ports:
         - containerPort: 8443
           name: https
+          protocol: TCP
         - containerPort: 8080
           name: http
+          protocol: TCP
         securityContext:
           runAsUser: 1001
           capabilities:
